syntax = "proto3";
import "google/protobuf/timestamp.proto";

message RoomResponse {
    oneof response {
        CreateRoomResponse createRoomResponse = 1;
        JoinRoomResponse joinRoomResponse = 2;
        ReadyResponse readyResponse = 3;
    }
}

message CreateRoomRequest {
    string AccountId = 1;
    string RoomKey = 2; // Option
}

message CreateRoomResponse {
    string RoomId = 1;
}

message JoinRoomRequest {
    string AccountId = 1;
    string RoomKey = 2; // Option
}

message JoinRoomResponse {
    string RoomId = 1;
}

message ReadyResponse {
    GhostRecord ghostRecord = 1; // Option
    MemberList memberList = 2;
    Direction direction = 3;
    google.protobuf.Timestamp date = 4;
}

message GhostRecord {
}

message MemberList {
//    repeated string AccountId = 1;
}

enum Direction {
    Up = 0;
    Down = 1;
    Left = 2;
    Right =3;
}


message PlayingData {
    string RoomId = 1;
    Coordinate coordinate = 2;
//    string AccountId = 2;
}

message Coordinate {
}

message Operation {
    string RoomId = 1;
    Direction direction = 2;
    float strength = 3; // 0 ~ 1
}

message ParentOperationRequest {
    string RoomId = 1;
}

message Empty {}

service RoomService {

    rpc CreateRoom(CreateRoomRequest) returns (stream RoomResponse) {};
    rpc ConnectPlayingData(stream PlayingData) returns (stream PlayingData) {};

    rpc ChildOperation(stream Operation) returns (Empty) {};
    rpc ParentOperation(ParentOperationRequest) returns (stream Operation) {};
}


